check user access before calling actions

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,6 +20,8 @@ jobs:
               run: npm ci
             - name: npm run checks
               run: npm run checks
+            - name: validate actions
+              run: npm run validate-actions
 
     test:
         timeout-minutes: 15
