--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -88,6 +88,7 @@ jobs:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   base-summary-filename: base-summary.json
                   coverage-filename: test-results/coverage/coverage-summary.json
+                  allowed-to-fail: true
 
             - uses: actions/upload-artifact@v4
               if: failure()
