--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "update-all-packages": "npx npm-check-updates -u"
     },
     "dependencies": {
+        "@aws-sdk/client-codebuild": "^3.775.0",
         "@aws-sdk/client-ecr": "^3.758.0",
         "@aws-sdk/client-s3": "^3.758.0",
         "@aws-sdk/client-secrets-manager": "^3.758.0",
