--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,6 @@ ALWAYS_CREATE_ECR=f
 SIMULATE_IMAGE_BUILD=t
 USE_S3_STORAGE=f
 DEBUG=none
+MAILGUN_DOMAIN=YOUR_DOMAIN
+MAILGUN_API_KEY=YOUR_KEY
+DOMAIN_NAME=localhost:4000
