--- a/package.json
+++ b/package.json
@@ -60,13 +60,15 @@
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
         "debug": "^4.4.0",
+        "form-data": "^4.0.2",
         "highlight.js": "^11.11.1",
         "jsonwebtoken": "^9.0.2",
         "kysely": "^0.27.5",
         "kysely-ctl": "^0.11.1",
+        "mailgun.js": "^12.0.1",
         "mantine-datatable": "^7.15.1",
         "mantine-form-zod-resolver": "^1.1.0",
-        "next": "15.2.2",
+        "next": "^15.2.4",
         "next-swagger-doc": "^0.4",
         "papaparse": "^5.5.2",
         "pg": "^8.13.3",
