build without clerk and database
Pages should not be prerendered if they require access to dynamic data sources
such as clerk and db.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ tests/coverage/
 playwright-report/
 src/styles/generated
 ./tests/fixtures/temp/large-file
+
+# clerk configuration (can include secrets)
+/.clerk/
