--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,24 @@
+# AWS Things
+AWS_ACCOUNT_ID=000000000000
+BUCKET_NAME=mgmt-app-local
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin
+AWS_REGION=us-east-1
+S3_ENDPOINT=http://localhost:9000
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
+
+# Clerk things
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_XXXX
 CLERK_SECRET_KEY=sk_test_XXXX
 E2E_CLERK_RESEARCHER_EMAIL=si-research-tester-XXX@XXX
 E2E_CLERK_RESEARCHER_PASSWORD=XXXX
 E2E_CLERK_MEMBER_EMAIL=si-member-tester-XXX@XXX
 E2E_CLERK_MEMBER_PASSWORD=XXXX
+
+
 ALWAYS_CREATE_ECR=f
 SIMULATE_IMAGE_BUILD=t
-USE_S3_STORAGE=f
 DEBUG=none
 MAILGUN_DOMAIN=YOUR_DOMAIN
 MAILGUN_API_KEY=YOUR_KEY
