--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
         "react-icons": "^5.5.0",
         "remeda": "^2.21.0",
         "server-only": "^0.0.1",
-        "si-encryption": "github:safeinsights/encryption",
+        "si-encryption": "github:safeinsights/encryption#8b6467a921278408e1f9e4159446e766f1d55e2e",
         "uuid": "^11.1.0",
         "zod": "^3.24.2"
     },
