--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,9 +43,10 @@ services:
         environment:
             MINIO_ROOT_USER: $MINIO_ROOT_USER
             MINIO_ROOT_PASSWORD: $MINIO_ROOT_PASSWORD
-            MINIO_ACCESS_KEY: $MINIO_ROOT_USER
-            MINIO_SECRET_KEY: $MINIO_ROOT_PASSWORD
-            MINIO_API_CORS_ALLOW_ORIGIN: '*'
+#            TODO Test without these
+#            MINIO_ACCESS_KEY: $MINIO_ROOT_USER
+#            MINIO_SECRET_KEY: $MINIO_ROOT_PASSWORD
+#            MINIO_API_CORS_ALLOW_ORIGIN: '*'
         command: server /data --console-address :9001
         restart: unless-stopped
         networks:
@@ -89,6 +90,8 @@ services:
             - DATABASE_URL=postgres://mgmnt:mgmntpass@postgres:5432/mgmnt_dev
             - S3_ENDPOINT=http://minio:9000
             - S3_BROWSER_ENDPOINT=http://localhost:9000
+            - MINIO_ROOT_USER=minioadmin
+            - MINIO_ROOT_PASSWORD=minioadmin
         env_file:
             - ./.env
         build:
