--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,12 +41,12 @@ services:
         volumes:
             - minio-data:/data
         environment:
-            MINIO_ROOT_USER: $MINIO_ROOT_USER
-            MINIO_ROOT_PASSWORD: $MINIO_ROOT_PASSWORD
-#            TODO Test without these
-#            MINIO_ACCESS_KEY: $MINIO_ROOT_USER
-#            MINIO_SECRET_KEY: $MINIO_ROOT_PASSWORD
-#            MINIO_API_CORS_ALLOW_ORIGIN: '*'
+            MINIO_ROOT_USER: minioadmin
+            MINIO_ROOT_PASSWORD: minioadmin
+        #            TODO Test without these
+        #            MINIO_ACCESS_KEY: $MINIO_ROOT_USER
+        #            MINIO_SECRET_KEY: $MINIO_ROOT_PASSWORD
+        #            MINIO_API_CORS_ALLOW_ORIGIN: '*'
         command: server /data --console-address :9001
         restart: unless-stopped
         networks:
