--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,10 +43,8 @@ services:
         environment:
             MINIO_ROOT_USER: minioadmin
             MINIO_ROOT_PASSWORD: minioadmin
-        #            TODO Test without these
-        #            MINIO_ACCESS_KEY: $MINIO_ROOT_USER
-        #            MINIO_SECRET_KEY: $MINIO_ROOT_PASSWORD
-        #            MINIO_API_CORS_ALLOW_ORIGIN: '*'
+            MINIO_ACCESS_KEY: minioadmin
+            MINIO_SECRET_KEY: minioadmin
         command: server /data --console-address :9001
         restart: unless-stopped
         networks:
@@ -92,6 +90,8 @@ services:
             - S3_BROWSER_ENDPOINT=http://localhost:9000
             - MINIO_ROOT_USER=minioadmin
             - MINIO_ROOT_PASSWORD=minioadmin
+            - AWS_ACCESS_KEY_ID=minioadmin
+            - AWS_SECRET_ACCESS_KEY=minioadmin
         env_file:
             - ./.env
         build:
