Try adding minion to checks

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -57,6 +57,13 @@ jobs:
               with:
                   node-version: 22
                   cache: 'npm'
+            -   name: Start MinIO (emulates S3)
+                run: |
+                    wget -q https://dl.min.io/server/minio/release/linux-amd64/minio
+                    chmod +x minio
+                    export MINIO_ROOT_USER=minioadmin
+                    export MINIO_ROOT_PASSWORD=minioadmin
+                    ./minio server /tmp/minio &
             - name: npm install
               run: npm ci
 
