--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -37,14 +37,24 @@ jobs:
                     POSTGRES_PASSWORD: si
                 options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
             minio:
-                # fixme: let's not depend on external unofficial image
                 image: minio/minio:edge-cicd
                 ports:
-                    - 9000:9000
+                    - '9000:9000'
+                volumes:
+                    - minio-data:/data
                 env:
                     MINIO_ROOT_USER: minioadmin
                     MINIO_ROOT_PASSWORD: minioadmin
-                options: --name=minio --health-cmd "curl http://localhost:9000/minio/health/live"
+                    MINIO_ACCESS_KEY: minioadmin
+                    MINIO_SECRET_KEY: minioadmin
+            minio-mc:
+                image: minio/mc
+        #                entrypoint: >
+        #                    /bin/sh -c "
+        #                    /usr/bin/mc alias set myminio http://minio:9000 minioadmin minioadmin;
+        #                    /usr/bin/mc mb myminio/mgmt-app-local;
+        #                    /usr/bin/mc anonymous set public myminio/mgmt-app-local;
+        #                    "
         permissions:
             pull-requests: write
             contents: write
@@ -66,18 +76,11 @@ jobs:
               with:
                   node-version: 22
                   cache: 'npm'
-            - name: Start MinIO
+            - name: Setup minio bucket
               run: |
-                  wget -q https://dl.min.io/client/mc/release/linux-amd64/mc
-                  chmod +x ./mc
-                  ./mc alias set myminio http://minio:9000 minioadmin minioadmin
-                  ./mc mb myminio/mgmt-app-local
-                  ./mc anonymous set public myminio/mgmt-app-local
-                  wget -q https://dl.min.io/server/minio/release/linux-amd64/minio
-                  chmod +x minio
-                  export MINIO_ROOT_USER=minioadmin
-                  export MINIO_ROOT_PASSWORD=minioadmin
-                  ./minio server /tmp/minio &
+                  mc alias set myminio http://minio:9000 minioadmin minioadmin
+                  mc mb myminio/mgmt-app-local
+                  mc anonymous set public myminio/mgmt-app-local
             - name: npm install
               run: npm ci
 
