--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -64,6 +64,14 @@ jobs:
             E2E_CLERK_MEMBER_PASSWORD: ${{ secrets.E2E_CLERK_MEMBER_PASSWORD }}
             E2E_CLERK_ADMIN_EMAIL: ${{ secrets.E2E_CLERK_ADMIN_EMAIL }}
             E2E_CLERK_ADMIN_PASSWORD: ${{ secrets.E2E_CLERK_ADMIN_PASSWORD }}
+            S3_ENDPOINT: 'http://minio:9000'
+            S3_BROWSER_ENDPOINT: 'http://localhost:9000'
+            MINIO_ROOT_USER: 'minioadmin'
+            MINIO_ROOT_PASSWORD: 'minioadmin'
+            AWS_ACCESS_KEY_ID: 'minioadmin'
+            AWS_SECRET_ACCESS_KEY: 'minioadmin'
+            BUCKET_NAME: 'mgmt-app-local'
+            AWS_REGION: 'us-east-1'
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v4
