region is needed

--- a/.env.sample
+++ b/.env.sample
@@ -20,3 +20,4 @@ S3_BROWSER_ENDPOINT=http://localhost:9198
 BUCKET_NAME=mgmt-app-local
 AWS_ACCESS_KEY_ID=si-local-minio
 AWS_SECRET_ACCESS_KEY=si-local-minio
+AWS_REGION=us-east-1
