--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,11 +36,12 @@ services:
     minio:
         image: minio/minio:latest
         ports:
-            - '9198:9198'
+            - '9198:9000'
             - '9199:9199'
         volumes:
             - minio-data:/data
         environment:
+            MINIO_OPTS: '--console-address :9199 --address :9198'
             MINIO_ROOT_USER: si-local-minio
             MINIO_ROOT_PASSWORD: si-local-minio
         command: server /data --console-address :9198 --address :9199
