--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,12 +76,12 @@ services:
             - NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
             - CLERK_SECRET_KEY=$CLERK_SECRET_KEY
             - AWS_ACCOUNT_ID=$AWS_ACCOUNT_ID
-            - E2E_CLERK_RESEARCHER_EMAIL=$E2E_CLERK_RESEARCHER_EMAIL
-            - E2E_CLERK_RESEARCHER_PASSWORD=$E2E_CLERK_RESEARCHER_PASSWORD
-            - E2E_CLERK_MEMBER_EMAIL=$E2E_CLERK_MEMBER_EMAIL
-            - E2E_CLERK_MEMBER_PASSWORD=$E2E_CLERK_MEMBER_PASSWORD
-            - E2E_CLERK_ADMIN_EMAIL=$E2E_CLERK_ADMIN_EMAIL
-            - E2E_CLERK_ADMIN_PASSWORD=$E2E_CLERK_ADMIN_PASSWORD
+            - CLERK_RESEARCHER_EMAIL=$CLERK_RESEARCHER_EMAIL
+            - CLERK_RESEARCHER_PASSWORD=$CLERK_RESEARCHER_PASSWORD
+            - CLERK_REVIEWER_EMAIL=$CLERK_REVIEWER_EMAIL
+            - CLERK_REVIEWER_PASSWORD=$CLERK_REVIEWER_PASSWORD
+            - CLERK_ADMIN_EMAIL=$CLERK_ADMIN_EMAIL
+            - CLERK_ADMIN_PASSWORD=$CLERK_ADMIN_PASSWORD
             - DATABASE_URL=postgres://mgmnt:mgmntpass@postgres:5432/mgmnt_dev
             - S3_ENDPOINT=http://minio:9198
             - S3_BROWSER_ENDPOINT=http://localhost:9198
