--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "update-db-types": "kysely-codegen --out-file src/database/types.ts",
         "checks": "run-p -c typecheck lint validate-actions",
         "test:e2e": "playwright test",
-        "test:unit": "vitest --coverage",
+        "test:unit": "vitest",
         "test": "run-p -c test:*",
         "test:coverage": "tsx tests/merged-coverage.ts",
         "pre:commit": "npx lint-staged",
