--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -102,17 +102,8 @@ jobs:
               run: npm run db:migrate
             - name: npm run test:unit
               run: npm run test:unit
-            - name: build server
-              run: |
-                  unset DATABASE_URL
-                  unset NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
-                  unset CLERK_SECRET_KEY
-                  echo NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }} > .env
-                  echo ASSETS_PREFIX=/ > .env
-                  npm run build
-                  cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/
-            - name: start server
-              run: node .next/standalone/server.js > server_output.log 2>&1 &
+            - name: build and run server
+              run: npm run ci:server -- server_output.log
             - name: npm run test:e2e
               run: npm run test:e2e
             - name: npm run test:coverage
