--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -47,8 +47,8 @@ jobs:
                 env:
                     MINIO_ROOT_USER: si-local-minio
                     MINIO_ROOT_PASSWORD: si-local-minio
-            minio-mc:
-                image: minio/mc
+            # minio-mc:
+            #     image: minio/mc
         permissions:
             pull-requests: write
             contents: write
@@ -81,15 +81,26 @@ jobs:
               with:
                   node-version: 22
                   cache: 'npm'
+            - uses: actions/cache@v4
+              with:  # https://nextjs.org/docs/pages/guides/ci-build-caching
+                  key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+                  path: |
+                      ~/.npm
+                      ~/.cache
+                      ${{ github.workspace }}/.next/cache
+                      # Generate a new cache whenever packages or source files change.
+                  restore-keys: |
+                      ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+
+
             - name: Download mc CLI
               run: |
-                  curl -O https://dl.min.io/client/mc/release/linux-amd64/mc
-                  chmod +x mc
+                  [ ! -f "~/.cache/mc" ] && curl --create-dirs -o ~/.cache/mc  https://dl.min.io/client/mc/release/linux-amd64/mc
             - name: Setup minio bucket
               run: |
-                  ./mc alias set siminio http://localhost:9198 si-local-minio si-local-minio
-                  ./mc mb siminio/mgmt-app-local
-
+                  chmod +x ~/.cache/mc
+                  ~/.cache/mc alias set siminio http://localhost:9198 si-local-minio si-local-minio
+                  ~/.cache/mc mb siminio/mgmt-app-local
             - name: npm install
               run: npm ci
 
@@ -101,6 +112,7 @@ jobs:
               run: npm run db:migrate
             - name: npm run test:unit
               run: npm run test:unit
+
             - name: build and run server
               run: npm run ci:server -- server_output.log
             - name: npm run test:e2e
