--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -127,10 +127,10 @@ jobs:
                   coverage-filename: test-results/coverage/coverage-summary.json
                   allowed-to-fail: true
             - name: Display server log
-              run: cat server_output.log
-            - name: Display server log
               run: if [ -f server_output.log ]; then cat server_output.log; fi
               if: always()
+            - uses: actions/upload-artifact@v4
+              if: failure()
               with:
                   name: playwright-report
                   path: test-results/e2e
