update phone input

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "jsonwebtoken": "^9.0.2",
         "kysely": "^0.27.5",
         "kysely-ctl": "^0.11.1",
+        "libphonenumber-js": "^1.12.8",
         "mailgun.js": "^12.0.1",
         "mantine-datatable": "^7.17.1",
         "mantine-form-zod-resolver": "^1.1.0",
@@ -80,6 +81,7 @@
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-icons": "^5.5.0",
+        "react-phone-number-input": "^3.4.12",
         "remeda": "^2.21.0",
         "server-only": "^0.0.1",
         "si-encryption": "github:safeinsights/encryption#8b6467a921278408e1f9e4159446e766f1d55e2e",
