--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "build:docker:production": "./bin/prod-docker-build",
         "build:docker:ci": "./bin/prod-docker-build ci-only-do-not-push",
         "ci:server": "./bin/ci-server",
-        "dev": "next dev --turbopack -p 4000",
+        "dev": "next dev -p 4000",
         "prepare": "panda codegen",
         "build": "next build",
         "db:migrate": "./bin/migrate-dev-db",
@@ -78,6 +78,8 @@
         "pg": "^8.13.3",
         "qrcode.react": "^4.2.0",
         "react": "19.0.0",
+    "@typefox/monaco-editor-react": "~6.8.0",
+    "monaco-languageclient-examples": "~2025.5.3",
         "react-dom": "19.0.0",
         "react-icons": "^5.5.0",
         "remeda": "^2.21.0",
