add monaco editor spike

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "build:docker:production": "./bin/prod-docker-build",
         "build:docker:ci": "./bin/prod-docker-build ci-only-do-not-push",
         "ci:server": "./bin/ci-server",
-        "dev": "next dev -p 4000",
+        "dev": "next dev --turbo -p 4000",
         "prepare": "panda codegen",
         "build": "next build",
         "db:migrate": "./bin/migrate-dev-db",
@@ -53,12 +53,15 @@
         "@mantine/form": "^8.0",
         "@mantine/modals": "^8.0",
         "@mantine/notifications": "^8.0",
+        "@monaco-editor/react": "^4.7.0-rc.0",
         "@phosphor-icons/react": "^2.1.7",
         "@sentry/nextjs": "^9.4.0",
         "@tanstack/react-query": "^5.67.1",
+        "@typefox/monaco-editor-react": "~6.8.0",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/papaparse": "^5.3.15",
         "@types/uuid": "^10.0.0",
+        "@types/vscode": "^1.100.0",
         "aws-iam-policy-types": "^1.0.2",
         "aws-sdk": "^2.1692.0",
         "child_process": "^1.0.2",
@@ -72,21 +75,27 @@
         "mailgun.js": "^12.0.1",
         "mantine-datatable": "^7.17.1",
         "mantine-form-zod-resolver": "^1.1.0",
+        "monaco-editor": "^0.52.2",
+        "monaco-languageclient": "^9.7.0",
+        "monaco-languageclient-examples": "~2025.5.3",
+        "monacopilot": "^1.1.23",
         "next": "^15.2.4",
         "next-swagger-doc": "^0.4",
+        "openai": "^5.3.0",
         "papaparse": "^5.5.2",
         "pg": "^8.13.3",
         "qrcode.react": "^4.2.0",
         "react": "19.0.0",
-    "@typefox/monaco-editor-react": "~6.8.0",
-    "monaco-languageclient-examples": "~2025.5.3",
         "react-dom": "19.0.0",
         "react-icons": "^5.5.0",
         "remeda": "^2.21.0",
         "server-only": "^0.0.1",
         "si-encryption": "github:safeinsights/encryption#8b6467a921278408e1f9e4159446e766f1d55e2e",
         "uuid": "^11.1.0",
-        "zod": "^3.24.2"
+        "vscode-languageclient": "^9.0.1",
+        "vscode-ws-jsonrpc": "^3.4.0",
+        "zod": "^3.24.2",
+        "zustand": "^5.0.5"
     },
     "devDependencies": {
         "@clerk/testing": "^1.4.25",
