--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "@octokit/rest": "^21.1.1",
         "@pandacss/dev": "^0.53.1",
         "@playwright/test": "^1.52",
+        "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2",
         "@testing-library/user-event": "^14.6.1",
         "@types/debug": "^4.1.12",
