--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@aws-sdk/lib-storage": "^3.758.0",
         "@aws-sdk/s3-presigned-post": "^3.758.0",
         "@aws-sdk/s3-request-presigner": "^3.758.0",
+        "@casl/ability": "^6.7.3",
         "@clerk/nextjs": "^6.13.0",
         "@faker-js/faker": "^9.5.1",
         "@mantine/core": "^8.1",
