--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
         "db:migrate": "./bin/migrate-dev-db",
         "start": "next start",
         "deploy": "tsx bin/deploy.ts",
-        "lint": "next lint && prettier --check .",
+        "lint": "next lint && prettier --check --log-level warn .",
         "validate-actions": "tsx tests/validate-actions.ts",
-        "lint:fix": "next lint --fix && prettier --write .",
+        "lint:fix": "next lint --fix && prettier --write --log-level warn .",
         "pre:push": "run-s lint:fix typecheck",
         "typecheck": "cd src && tsc --noEmit",
         "update-db-types": "kysely-codegen --out-file src/database/types.ts",
