--- a/trivy.yaml
+++ b/trivy.yaml
@@ -1,15 +1,26 @@
-format: json
+format: 'table'
 exit-code: 1
 debug: true
 severity:
     - MEDIUM
     - HIGH
     - CRITICAL
+timeout: 5m
 scan:
     scanners:
         - vuln
         - secret
         - misconfig
+    skip-dirs:
+        - .git
+        - .next
+        - .husky
+        - node_modules
+        - test-results
+        - playwright-report
+# comment the next two lines to also report unfixed vulnerabilities
+vulnerability:
+    ignore-unfixed: true
 misconfiguration:
     scanners:
         - dockerfile
