--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -32,12 +32,6 @@ jobs:
             security-events: write
         steps:
             - uses: actions/checkout@v4
-            - uses: actions/setup-node@v4
-              with:
-                  node-version: 22
-                  cache: 'npm'
-            - name: npm install
-              run: npm ci
             - name: Run Trivy vulnerability scanner in fs mode
               uses: aquasecurity/trivy-action@0.28.0
               with:
@@ -46,6 +40,7 @@ jobs:
                   trivy-config: trivy.yaml
             - name: Upload Trivy scan results to GitHub Security tab
               uses: github/codeql-action/upload-sarif@v3
+              if: always()
               with:
                   sarif_file: 'trivy-results.sarif'
 
