--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -28,8 +28,7 @@ jobs:
     trivy:
         timeout-minutes: 5
         runs-on: ubuntu-latest
-        permissions:
-            security-events: write
+        permissions: {}
         steps:
             - uses: actions/checkout@v4
             - name: Run Trivy vulnerability scanner in fs mode
@@ -38,11 +37,6 @@ jobs:
                   scan-type: 'fs'
                   scan-ref: '.'
                   trivy-config: trivy.yaml
-            - name: Upload Trivy scan results to GitHub Security tab
-              uses: github/codeql-action/upload-sarif@v3
-              if: always()
-              with:
-                  sarif_file: 'trivy-results.sarif'
 
     test:
         timeout-minutes: 15
