--- a/trivy.yaml
+++ b/trivy.yaml
@@ -1,5 +1,4 @@
-format: 'sarif'
-output: 'trivy-results.sarif'
+format: 'table'
 exit-code: 1
 debug: true
 severity:
@@ -19,6 +18,8 @@ scan:
         - node_modules
         - test-results
         - playwright-report
+    skip-files:
+        - .env
 vulnerability:
     ignore-unfixed: true
 misconfiguration:
