--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -6,7 +6,7 @@ COPY --from=public.ecr.aws/awsguru/aws-lambda-adapter:0.8.4 /lambda-adapter /opt
 RUN mkdir /app
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y curl jq && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends curl jq && rm -rf /var/lib/apt/lists/*
 
 FROM base AS npm
 
