point CLA check to main for production, testing happens in new temp branches

--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -25,9 +25,9 @@ jobs:
           # JSON file committed by the action; do not pre-create this file
           path-to-signatures: 'signatures/version1/cla.json'
           # Full GitHub blob URL to CLA.md committed in this repository (required)
-          path-to-document: 'https://github.com/safeinsights/management-app/blob/otter-303-add-cla-confirmation/CLA.md'
+          path-to-document: 'https://github.com/safeinsights/management-app/blob/main/CLA.md'
           # Branch that stores the signatures file; MUST NOT be protected
-          branch: 'otter-303-add-cla-confirmation'
+          branch: 'main'
           # Exempt known users/bots from signing (optional)
           allowlist: 'dependabot[bot],bot*'
           # Optional customizations (uncomment to use)
